--- a/src/app/pages/company/places/places-company.component.scss
+++ b/src/app/pages/company/places/places-company.component.scss
@@ -1,5 +1,11 @@
 :host ::ng-deep .mat-mdc-form-field {
-    width: 400px;
+    // width: 400px;
+}
+:host ::ng-deep .p-inputtext {
+    width: 500px;
+    @media (max-width: 768px) {
+        width: 100%;
+    }
 }
 
 .wrapper {
@@ -8,4 +14,8 @@
     > * {
         margin-right: 20px;
     }
+}
+
+.form-row {
+    margin-bottom: 1rem;
 }
