--- a/src/app/pages/attendance/users/users-attendance.component.html
+++ b/src/app/pages/attendance/users/users-attendance.component.html
@@ -158,7 +158,10 @@
                                                         getButtonStyle(
                                                             attendance?.status
                                                         )
-                                                    "></p-splitButton>
+                                                    "
+                                                     appendTo="body"
+                                                     ></p-splitButton>
+                                                    
                         </td>
                         <td>
                             <div style="
